# wslforge

./: .gitignore  .releaserc.json  Cargo.toml  Dockerfile  LICENSE  README.md  cloud-init.template.yaml  cloud-init.yaml  config.tamplate.yaml  config.template.yaml  config.template.yml
.github/workflows/: ci.yml  develop.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/config/: loader.rs  mod.rs  model.rs
src/wsl/: cloud_init.rs  commands.rs  env.rs  helpers.rs  manager.rs  mod.rs  provider.rs  reporting.rs  validation.rs
src/wsl/cloud_init/: mod.rs
src/wsl/engine/: api.rs  cli.rs  mod.rs
src/wsl/validation/: mod.rs
